Fixed on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,6 +67,7 @@ section {
   scroll-snap-align: center;
   position: relative;
   /* overflow: auto; */
+  min-height: calc(100dvh);
 }
 
 * {
@@ -90,6 +91,7 @@ body {
 
 img {
   max-width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: center;
 }
@@ -175,6 +177,8 @@ p {
   grid-template-areas: 'content image';
   grid-template-columns: 1fr 1fr;
   /* border: 100px solid white; */
+  max-height: calc(100dvh);
+  overflow: hidden;
 }
 
 .section:nth-child(odd) {
@@ -243,12 +247,24 @@ p {
   .section {
     display: block;
   }
-}
 
-@media screen and (max-width: 800px) {
-  .section {
-    max-height: calc(100dvh);
-    overflow: hidden;
+  section:mot(.section--text_image) {
+    min-height: unset;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+  }
+
+  .section,
+  .section__content {
+    max-height: unset !important;
+  }
+
+  .section__item {
+    grid-template-columns: 1fr;
+  }
+
+  .section__item-content {
+    margin-bottom: 10vh;
   }
 }
 
